reorganized images into 1 folder, updated README

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <section class="container">
         <div class="game-title">
-            <img src="./logo.png">
+            <img src="./images/logo.png">
             <h1>ROCK PAPER SCISSORS</h1>
         </div>
         <p class="game-choose">Let's play 5 rounds <br> Choose your weapon</p>
         <div class="game-box">
-            <img id="rock" alt="rock" title="rock" src="./rock.png"/>
-            <img id="paper" alt="paper" title="paper" src="./paper.png"/>
-            <img id="scissors" alt="scissors" title="scissors" src="./scissors.png"/>
+            <img id="rock" alt="rock" title="rock" src="./images/rock.png"/>
+            <img id="paper" alt="paper" title="paper" src="./images/paper.png"/>
+            <img id="scissors" alt="scissors" title="scissors" src="./images/scissors.png"/>
         </div>
         <div class="game-board">
             <p class="game-round">Round: 0</p>
@@ -29,7 +29,7 @@
                 <p class="computer-score">Computer's score: 0</p>
             </div>
             <p class="final-result"></p>
-            <span class="reset"><img alt="reset" src="./reset.png"></span>
+            <span class="reset"><img alt="reset" src="./images/reset.png"></span>
         </div>
     </section>
     <script src="main.js"></script>
